# loom

./: .checkov.yaml  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  ONBOARDING.md  README.md  SPECIFICATIONS.md  makefile
backend/: .dockerignore  Dockerfile  README.md  SPECIFICATIONS.md  makefile  pyproject.toml  requirements.txt
backend/app/: __init__.py  db.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  a2a.py  agent.py  approval_log.py  approval_policy.py  audit.py  authorizer_config.py  mcp.py  (+14 more)
backend/etc/: environment.sh.example  models.json  providers.json  runtime_pricing.json
backend/iac/: ec2.yaml  ecs.yaml  infra.yaml  rds.yaml
backend/scripts/: debug_session_correlation.py  fix_sequences.py  list_memory_records.py  migrate_sqlite_to_postgres.py  query_memory_records.py  reset_db.py  stream.py
backend/tests/: __init__.py  test_a2a.py  test_admin_audit.py  test_agentcore.py  test_agents.py  test_agents_deploy.py  test_approvals.py  test_auth.py  test_authorizer_linking.py  test_cloudwatch.py  test_costs.py  test_credential_service.py  test_credentials.py  test_deployment.py  test_harness.py  test_iam.py  test_identity_providers.py  test_integration_info.py  test_integrations.py  test_invocations.py  test_latency.py  test_litellm_service.py  test_logs.py  test_mcp.py  test_memories.py  test_model_catalog.py  test_model_selection.py  test_rds.py  test_registry.py  test_scopes.py  test_security.py  test_settings_litellm_proxy.py  test_settings_models.py  test_tags.py  test_tokens.py  test_traces.py
(+206 files in other folders)
