[project]
name = "loom-backend"
version = "0.1.0"
description = "Loom Agent Builder Playground - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "boto3>=1.34.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
